# simconnect-enforcer

./: .gitignore  LICENSE-3RD-PARTY.txt  LICENSE.txt  README.md  app.py  breakin.py  coefficient_edditor.ui  coefficient_edditor_ui.py  coefficient_editor.py  envelope_editor.py  ffb.py  joysticksettingspage.py  logging_console.py  main.py  mainwindow.ui  mainwindow_ui.py  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py  serial_console.py  serial_worker.py  serialportsettingspage.py  settingswindow.ui  settingswindow_ui.py  simconnect_force_calculator.py  simconnect_worker.py  test.py  uivector.py  waveform_editor.py
